<resources>
    <string name="app_name">FeelingBox</string>
    <string name="title_activity_act_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="lbl_logo">FEELINGBOX</string>
    <string name="lbl_subtitle">Good feelings, create life</string>
    <string name="lbl_cadastrar">Cadastrar</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_senha">Senha</string>
    <string name="btn_Entrar">Entrar</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="edt_login">Login</string>
    <string name="edt_senha">Senha</string>
    <string name="edt_nome">Nome</string>
    <string name="lbl_cadastro">Cadastro</string>
    <string name="edt_email">Email</string>
    <string name="lbl_datanasc">Nascimento</string>
    <string name="edt_datanasc">Nascimento</string>
    <string name="edt_nick">Apelido</string>
    <string name="lbl_sexo">Sexo</string>
    <string name="rbt_male">Masculino</string>
    <string name="rbt_female">Feminino</string>
    <string name="rbt_other">Outro</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="lbl_title_cadastro">CADASTRO</string>
    <string name="title_activity_act_home">Home</string>
    <string name="dialogo_titulo_erro">Erro</string>
    <string name="dialogo_botao_ok">Ok</string>
    <string name="title_menu_conta">Conta</string>
    <string name="title_activity_act_perfil">Perfil</string>
    <string name="title_activity_act_editar_perfil">Editar Perfil</string>
    <string name="title_menu_editar">Editar</string>
    <string name="title_menu_salvar">Salvar</string>
    <string name="title_menu_cancelar">Cancelar</string>
    <string name="title_menu_sair">Sair</string>
    <string name="title_activity_act_criar_post">Criar Postagem</string>
    <string name="edt_texto_post">Digite aqui...</string>
    <string name="edt_texto_tags">Digite suas tags aqui...</string>
    <string name="title_menu_postar">Postar</string>
    <string name="exemplo_hint_usuario">Nome do Usuário</string>
    <string name="exemplo_hint_post">post do usuário</string>
    <string name="print_erro_validacao_post_campovazio">Digite algo para publicar.</string>
    <string name="print_erro_validacao_comentario_campovazio">Digite algo para comentar.</string>
    <string name="print_msg_postado">Postado com sucesso.</string>
    <string name="print_msg_comentado">Comentario enviado com sucesso.</string>
    <string name="print_erro_validacao_edt_senha_invalida">Senha inválida.</string>
    <string name="print_erro_validacao_edt_data_invalida">Data inválida.</string>
    <string name="print_erro_validacao_edt_email_invalido">Email inválido.</string>
    <string name="print_erro_validacao_edt_nick_invalido">Nick inválido.</string>
    <string name="print_msg_alteracoes_salva">Alterações salvas.</string>
    <string name="btn_comentar">Comentar</string>
    <string name="exemplo_hint_comentario">A vida é como uma câmera. Foque no que é importante, capture bons momentos, desenvolva a vida a partir de negativos. E, se as coisas não derem certo, tire outra foto.</string>
    <string name="title_activity_act_criar_comentario">Criar Comentário</string>
    <string name="title_menu_comentar">Comentar</string>
    <string name="exemplo_hint_data">01/01/2017 às 12:12:00</string>
    <string name="title_activity_act_perfil_post">ActPerfilPost</string>
    <string name="search_hint">Pesquisar Posts</string>
    <string name="title_activity_act_searchable">pesquisa</string>
    <string name="title_menu_limpar_historico">Limpar histórico</string>
    <string name="print_histórico_apagado">Histórico apagado</string>
    <string name="lbl_nehum_post_encontrado">Nenhum post encontrado.</string>
    <string name="title_menu_follow">Seguir</string>
    <string name="title_menu_unfollow">Deixar de Seguir</string>
    <string name="txtseguidos">Seguindo</string>
    <string name="txtseguidores">Seguidores</string>
    <string name="txtseguidos2">Seguidos:</string>
    <string name="txtseguidores2">Seguidores:</string>
    <string name="title_activity_act_seguidos_seguidores">ActSeguidosSeguidores</string>
    <string name="title_menu_perfil">Perfil</string>
    <string name="tilte_menu_pesquisar">Pesquisar</string>
    <string name="title_menu_home">Home</string>
    <string name="lbl_bem_vindo">BEM-VINDO</string>
    <string name="title_activity_act_post">Postagem</string>
    <string name="btn_responder">Responder</string>
    <string name="exemplo_num_comentarios">0 Comentário</string>
    <string name="title_tab_home">Home</string>
    <string name="title_tab_favoritos">Favoritos</string>
    <string name="title_tab_recomendados">Recomendados</string>
    <string name="msg_login_senha_incorreto">Login ou senha incorretos.</string>
    <string name="msg_data_invalida">Data Inválida.</string>
    <string name="msg_senha_fora_padrão">A senha precisa ter entre 6 e 10 caracteres, ter ao menos uma letra minúscula, maiúscula e um número.</string>
    <string name="msg_email_invalido">Endereço de Email Inválido.</string>
    <string name="msg_nick_invalido">Apelido Inválido</string>
    <string name="msg_nome_invalido">Nome Inválido</string>
    <string name="msg_cadastro_sucesso">Cadastrado com Sucesso!</string>
    <string name="erro_msg_postdonotela_null">postDonoTela é igual a null</string>
    <string name="erro_msg_usuariodonotela_null">usuarioDonoTela é igual a null</string>
    <string name="erro_msg_mododonotela_null">modo é igual a null</string>
    <string name="description_logotipo_feelingbox">Logotipo FEELINGBOX</string>
    <string name="default_follow_number">0</string>
    <string name="lbl_nome">Nome</string>
    <string name="default_lbl_nome">Nome do Usuário</string>
    <string name="lbl_nick">Apelido</string>
    <string name="default_lnl_nick">Apelido do Usuário</string>
    <string name="lbl_nasc">Data de Nascimento</string>
    <string name="default_lbl_nasc">dd/mm/aaaa</string>
    <string name="default_lbl_sexo">Masculino</string>
    <string name="lbl_email">Email</string>
    <string name="default_lbl_email">Email@Email.com</string>
    <string name="title_tab_mais_comentados">Mais Comentados</string>
    <string name="title_tab_pegando_fogo">Pegando Fogo</string>
</resources>
