<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ufrpe.feelingsbox.gui.ActSignUp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="176dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/lbl_logo1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/txtCadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elegantTextHeight="false"
        android:gravity="center"
        android:text="@string/lbl_cadastro"
        android:textColor="@color/colorFontLogo"
        android:textIsSelectable="false"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView2"
        app:layout_constraintRight_toRightOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edt_nome"
        android:inputType="textPersonName"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCadastro"
        app:layout_constraintRight_toRightOf="@+id/txtCadastro"
        app:layout_constraintLeft_toLeftOf="@+id/txtCadastro" />

    <EditText
        android:id="@+id/edtNick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/edt_nick"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="@+id/edtNome"
        app:layout_constraintRight_toRightOf="@+id/edtNome"
        app:layout_constraintTop_toBottomOf="@+id/edtNome" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/edtNick"
        app:layout_constraintLeft_toLeftOf="@+id/edtNick"
        app:layout_constraintRight_toRightOf="@+id/edtNick" />

    <EditText
        android:id="@+id/edtNasc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lbl_datanasc"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        app:layout_constraintRight_toRightOf="@+id/edtEmail"
        app:layout_constraintLeft_toLeftOf="@+id/edtEmail" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edt_senha"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtNasc"
        app:layout_constraintLeft_toLeftOf="@+id/edtNasc"
        app:layout_constraintRight_toRightOf="@+id/edtNasc" />

    <TextView
        android:id="@+id/lblSexo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/lbl_sexo"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/edtSenha"
        app:layout_constraintLeft_toLeftOf="@+id/edtSenha"
        app:layout_constraintRight_toRightOf="@+id/edtSenha"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="4dp"
        tools:ignore="RtlHardcoded" />

    <Spinner
        android:id="@+id/spnSexo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/lblSexo"
        app:layout_constraintRight_toRightOf="@+id/lblSexo"
        app:layout_constraintTop_toBottomOf="@+id/lblSexo" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:onClick="cancelarCadastro"
        android:text="@string/btn_cancelar"
        app:layout_constraintLeft_toLeftOf="@+id/edtSenha"
        app:layout_constraintTop_toBottomOf="@+id/spnSexo" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:onClick="validarCadastrar"
        android:text="@string/btn_cadastrar"
        app:layout_constraintRight_toRightOf="@+id/edtSenha"
        app:layout_constraintTop_toBottomOf="@+id/spnSexo" />

</android.support.constraint.ConstraintLayout>
