<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usuario.gui.ActLogin">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="176dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/description_logotipo_feelingbox"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/txtLogo1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elegantTextHeight="false"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/lbl_logo"
                android:textAllCaps="false"
                android:textColor="@color/colorFontLogo"
                android:textIsSelectable="false"
                android:textSize="36sp"
                android:typeface="normal"
                app:layout_constraintLeft_toLeftOf="@+id/imageView"
                app:layout_constraintRight_toRightOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/txtSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:clickable="false"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/lbl_subtitle"
                android:textColor="@color/colorFontSubtitle"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/txtLogo1"
                app:layout_constraintRight_toRightOf="@+id/txtLogo1"
                app:layout_constraintTop_toBottomOf="@+id/txtLogo1" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/txtSubtitle"
                app:layout_constraintRight_toRightOf="@+id/txtSubtitle"
                app:layout_constraintTop_toBottomOf="@+id/txtSubtitle">

                <EditText
                    android:id="@+id/edtLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edt_login"
                    android:inputType="textEmailAddress|textPersonName"
                    android:selectAllOnFocus="false" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="@+id/textInputLayout"
                app:layout_constraintRight_toRightOf="@+id/textInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                <EditText
                    android:id="@+id/edtSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edt_senha"
                    android:inputType="textPassword"
                    android:onClick="efetuarLogin"
                    android:selectAllOnFocus="false" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnEntrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorBtnBlue"
                android:onClick="efetuarLogin"
                android:text="@string/btn_Entrar"
                android:textColor="@color/colorFontNormalLight"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/textInputLayout2"
                app:layout_constraintRight_toRightOf="@+id/textInputLayout2"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

            <Button
                android:id="@+id/btnCadastrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorBtnYellow"
                android:onClick="cadastrarUsuario"
                android:text="@string/btn_cadastrar"
                android:textColor="@color/colorFontNormalLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/btnEntrar"
                app:layout_constraintRight_toRightOf="@+id/btnEntrar"
                app:layout_constraintTop_toBottomOf="@+id/btnEntrar" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
