<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorItemBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ufrpe.feelingsbox.redesocial.gui.ActPerfil"
    tools:showIn="@layout/act_perfil">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClickSeguidosPerfil"
                    android:background="?android:attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/top_border_pad"
                    android:paddingBottom="12dp">

                    <TextView
                        android:id="@+id/lblSeguindo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/txt_start_pad"
                        android:paddingEnd="@dimen/txt_end_pad"
                        android:text="@string/txtseguidos"
                        android:textColor="@color/colorBtnBlue"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtSeguidosValor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/txt_start_pad"
                        android:paddingEnd="@dimen/txt_end_pad"
                        android:paddingTop="@dimen/txt_sub_top_pad"
                        android:text="@string/default_follow_number"
                        android:textColor="@color/colorFontSubLabel"
                        android:textSize="18sp" />
                </LinearLayout>

                <View
                    android:id="@+id/view"
                    android:layout_width="@dimen/divider_thickness"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/divider_left_and_right"
                    android:layout_marginBottom="@dimen/divider_left_and_right"
                    android:background="@color/colorBtnYellow"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClickSeguidoresPerfil"
                    android:background="?android:attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/top_border_pad"
                    android:paddingBottom="12dp">

                    <TextView
                        android:id="@+id/lblSeguidores"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="16dp"
                        android:paddingEnd="0dp"
                        android:text="@string/txtseguidores"
                        android:textColor="@color/colorBtnBlue"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtSeguidoresValor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/txt_start_pad"
                        android:paddingEnd="@dimen/txt_end_pad"
                        android:paddingTop="@dimen/txt_sub_top_pad"
                        android:text="@string/default_follow_number"
                        android:textColor="@color/colorFontSubLabel"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_thickness"
                android:layout_marginLeft="@dimen/divider_left_and_right"
                android:layout_marginRight="@dimen/divider_left_and_right"
                android:background="@color/colorBtnYellow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="onClickSound"
                android:orientation="vertical"
                android:paddingBottom="@dimen/bottom_border_pad"
                android:paddingTop="@dimen/top_border_pad">

                <TextView
                    android:id="@+id/lblNome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="@dimen/txt_end_pad"
                    android:paddingStart="@dimen/txt_start_pad"
                    android:text="@string/lbl_nome"
                    android:textColor="@color/colorFontNormalDark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtNome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="@dimen/txt_end_pad"
                    android:paddingStart="@dimen/txt_start_pad"
                    android:paddingTop="@dimen/txt_sub_top_pad"
                    android:text="@string/default_lbl_nome"
                    android:textColor="@color/colorFontSubLabel"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_thickness"
                android:layout_marginLeft="@dimen/divider_left_and_right"
                android:layout_marginRight="@dimen/divider_left_and_right"
                android:background="@color/colorBtnYellow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="onClickSound"
                android:orientation="vertical"
                android:paddingBottom="@dimen/bottom_border_pad"
                android:paddingTop="@dimen/top_border_pad">

                <TextView
                    android:id="@+id/lblNick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="@dimen/txt_end_pad"
                    android:paddingStart="@dimen/txt_start_pad"
                    android:text="@string/lbl_nick"
                    android:textColor="@color/colorFontNormalDark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtNick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="@dimen/txt_end_pad"
                    android:paddingStart="@dimen/txt_start_pad"
                    android:paddingTop="@dimen/txt_sub_top_pad"
                    android:text="@string/default_lnl_nick"
                    android:textColor="@color/colorFontSubLabel"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_thickness"
                android:layout_marginLeft="@dimen/divider_left_and_right"
                android:layout_marginRight="@dimen/divider_left_and_right"
                android:background="@color/colorBtnYellow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="onClickSound"
                android:orientation="vertical"
                android:paddingBottom="@dimen/bottom_border_pad"
                android:paddingTop="@dimen/top_border_pad">

                <TextView
                    android:id="@+id/lblEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="@dimen/txt_end_pad"
                    android:paddingStart="@dimen/txt_start_pad"
                    android:text="@string/lbl_email"
                    android:textColor="@color/colorFontNormalDark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="@dimen/txt_end_pad"
                    android:paddingStart="@dimen/txt_start_pad"
                    android:paddingTop="@dimen/txt_sub_top_pad"
                    android:text="@string/default_lbl_email"
                    android:textColor="@color/colorFontSubLabel"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_thickness"
                android:layout_marginLeft="@dimen/divider_left_and_right"
                android:layout_marginRight="@dimen/divider_left_and_right"
                android:background="@color/colorBtnYellow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="onClickSound"
                android:orientation="vertical"
                android:paddingBottom="@dimen/bottom_border_pad"
                android:paddingTop="@dimen/top_border_pad">

                <TextView
                    android:id="@+id/lblNasc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="@dimen/txt_end_pad"
                    android:paddingStart="@dimen/txt_start_pad"
                    android:text="@string/lbl_nasc"
                    android:textColor="@color/colorFontNormalDark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtNasc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="@dimen/txt_end_pad"
                    android:paddingStart="@dimen/txt_start_pad"
                    android:paddingTop="@dimen/txt_sub_top_pad"
                    android:text="@string/default_lbl_nasc"
                    android:textColor="@color/colorFontSubLabel"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_thickness"
                android:layout_marginLeft="@dimen/divider_left_and_right"
                android:layout_marginRight="@dimen/divider_left_and_right"
                android:background="@color/colorBtnYellow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="onClickSound"
                android:orientation="vertical"
                android:paddingBottom="@dimen/bottom_border_pad"
                android:paddingTop="@dimen/top_border_pad">

                <TextView
                    android:id="@+id/lblSexo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="@dimen/txt_end_pad"
                    android:paddingStart="@dimen/txt_start_pad"
                    android:text="@string/lbl_sexo"
                    android:textColor="@color/colorFontNormalDark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtSexo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="@dimen/txt_end_pad"
                    android:paddingStart="@dimen/txt_start_pad"
                    android:paddingTop="@dimen/txt_sub_top_pad"
                    android:text="@string/default_lbl_sexo"
                    android:textColor="@color/colorFontSubLabel"
                    android:textSize="18sp" />

            </LinearLayout>



            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_thickness"
                android:layout_marginLeft="@dimen/divider_left_and_right"
                android:layout_marginRight="@dimen/divider_left_and_right"
                android:background="@color/colorBtnYellow" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
